# cpp-colly

./: CMakeLists.txt  Makefile.am  README  configure.ac  warnings
doc/: Doxyfile.bak  docgen.in
include/: #trm_colly.h#  Makefile.am  trm_colly.h
src/: Makefile.am  correct.cc  find_groups.cc  grab.cc  group.cc  mlist.cc  read_molly_head.cc  rejig_molly_head.cc  reorder.cc  skip_bytes.cc  skip_molly_data.cc  write_molly_head.cc
